--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 title: A Lazy Developer # your site title
 author: JongGyun Park
 email: jonggyuni@gmail.com # email for form submission, you also have to change it in _js/scripts.js
-description: > # this means to ignore newlines until "baseurl:"
+#description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://janczizikow.github.io/sleek" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username:  # replace with your_twitter_username or comment to remove link from footer
+#twitter_username:  # replace with your_twitter_username or comment to remove link from footer
 github_username:  jonggyun # replace with your_github_username or comment to remove link from footer
-instagram_username:  # replace with your_instagram_username or comment to remove link from footer
+#instagram_username:  # replace with your_instagram_username or comment to remove link from footer
 social:
   name: JongGyun Park
   links:
