--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: A Lazy Developer # your site title
 author: JongGyun Park
 email: jonggyuni@gmail.com # email for form submission, you also have to change it in _js/scripts.js
-#description: > # this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
