--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: jongp # your site title
 author: JongGyun Park
 email: jonggyuni@gmail.com # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
-  Front-End Developer
+  Web Developer
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://janczizikow.github.io/sleek" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username:  # replace with your_twitter_username or comment to remove link from footer
